--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-awesome-alerts": "^1.4.2",
     "react-native-unordered-list": "^1.0.4",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12"
